--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,21 +1,29 @@
+name: Release to PyPI
+
+on:
+  release:
+    types: [released]
+
 jobs:
-  build-n-publish:
-    name: Build and publish Python to PyPI
-    runs-on: ubuntu-20.04
+  release:
+
+    runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@main
+    - uses: actions/checkout@v2
     - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Install pypa/build
-      run: >-
-        python -m pip install build --user
-    - name: Build a binary wheel and a source tarball
-      run: >-
-        python -m build --sdist --wheel --outdir dist/ .
-    - name: Publish distribution to PyPI
-      if: startsWith(github.ref, 'refs/tags')
-      uses: pypa/gh-action-pypi-publish@main
-      with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
+    - name: Install Tools
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel twine
+    - name: Package and Upload
+      env:
+        STACKMANAGER_VERSION: ${{ github.event.release.tag_name }}
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+      run: |
+        python setup.py sdist bdist_wheel
+        twine upload dist/*
