--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,9 +16,8 @@ jobs:
     - name: Install Tools
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
         pip install -r requirements.txt
-        pip install matplotlib
+        pip install -r requirements_test.txt
         pip install -e .
     - name: Pytest
       run: |
