--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,9 +19,7 @@ jobs:
     - name: Install Tools
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r requirements_test.txt
-        pip install -e .
+        pip install -e .[test]
     - name: Pytest
       run: |
         pytest
