--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,5 +4,8 @@ build:
 python:
   version: 3.8
   install:
-    - requirements: requirements.txt
-    - requirements: requirements_rtd.txt
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
