--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ test = [
 
 docs = [
     "pillow",
-    "sphinx-gallery"
+    "sphinx-gallery",
     "matplotlib==3.2.2",
     "scipy",
     "pandas",
