--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,7 +19,8 @@ jobs:
     - name: Install Tools
       run: |
         python -m pip install --upgrade pip
-        pip install -e .[test]
+        pip install .[test]
+        pip install .
     - name: Pytest
       run: |
         pytest
