--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,9 +1,13 @@
+version: 2
+
 build:
     image: latest
 
+sphinx:
+  configuration: doc/conf.py
+    
 python:
-  version: 3.8
-  install:
+  version: 3.9
   install:
     - method: pip
       path: .
