--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,8 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 
-[tool.setuptools.packages]
-find = {}
+[tool.setuptools]
+packages = ["probeinterface"]
 
 
 [project.optional-dependencies]
