--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "probeinterface"
-version = "0.2.12"
+version = "0.2.13"
 authors = [
   { name="Samuel Garcia", email="sam.garcia.die@gmail.com" },
   { name="Alessio Buccino", email="alessiop.buccino@gmail.com" },
@@ -27,12 +27,12 @@ changelog = "https://probeinterface.readthedocs.io/en/main/release_notes.html"
 
 
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=65.4"]
 build-backend = "setuptools.build_meta"
 
 
-[tool.setuptools.packages]
-find = {}
+[tool.setuptools]
+package-dir = {"" = "probeinterface"}
 
 
 [project.optional-dependencies]
