--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ build-backend = "setuptools.build_meta"
 
 
 [tool.setuptools]
-package-dir = {"" = "probeinterface"}
+packages = ["probeinterface"]
+package-dir = {"probeinterface" = "probeinterface"}
 
 
 [project.optional-dependencies]
