--- a/.github/workflows/full_tests.yml
+++ b/.github/workflows/full_tests.yml
@@ -3,7 +3,7 @@ name: Test on Ubuntu
 on:
   pull_request:
       branches: [main]
-      types: [synchronize, opened, reopened, ready_for_review]
+      types: [synchronize, opened, reopened]
 
 jobs:
   build-and-test:
@@ -11,11 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.8
+        python-version: 3.11
     - name: Install Tools
       run: |
         python -m pip install --upgrade pip
