--- a/.github/workflows/full_tests.yml
+++ b/.github/workflows/full_tests.yml
@@ -11,11 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.11
+        python-version: "3.11"
     - name: Install Tools
       run: |
         python -m pip install --upgrade pip
