--- a/.github/workflows/full_tests.yml
+++ b/.github/workflows/full_tests.yml
@@ -16,11 +16,10 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.11"
-    - name: Install Tools
+    - name: Install package
       run: |
         python -m pip install --upgrade pip
         pip install .[test]
-        pip install .
     - name: Pytest
       run: |
         pytest tests/
