add code-cov as a dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ package-dir = {"probeinterface" = "probeinterface"}
 
 test = [
     "pytest",
+    "pytest-cov",
     "matplotlib",
     "scipy",
     "pandas",
