--- a/.github/workflows/full_tests.yml
+++ b/.github/workflows/full_tests.yml
@@ -22,7 +22,7 @@ jobs:
         pip install .[test]
     - name: Pytest
       run: |
-        pytest --cov=./ --cov-report xml:./coverage.xml tests/ 
+        pytest --cov=./probeinterface/ --cov-report xml:./coverage.xml tests/ 
     - uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
