--- a/.github/workflows/full_tests.yml
+++ b/.github/workflows/full_tests.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
       branches: [main]
       types: [synchronize, opened, reopened]
+  workflow_dispatch:
+  schedule:
+    - cron: "0 12 * * *"  # Daily at noon UTC
+
 
 jobs:
   build-and-test:
