fix code coverage

--- a/.github/workflows/full_tests.yml
+++ b/.github/workflows/full_tests.yml
@@ -26,10 +26,9 @@ jobs:
         pip install .[test]
     - name: Pytest
       run: |
-        pytest --cov=./probeinterface/ --cov-report xml:./coverage.xml tests/ 
+        pytest --cov=./probeinterface/ --cov-report xml:./coverage.xml
     - uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         fail_ci_if_error: true
         file: ./coverage.xml
-        flags: unittests
