--- a/.github/workflows/full_tests.yml
+++ b/.github/workflows/full_tests.yml
@@ -20,13 +20,14 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.11"
+        cache: "pip" # caching pip dependencies
     - name: Install package
       run: |
         python -m pip install --upgrade pip
         pip install -e .[test]
     - name: Pytest
       run: |
-        pytest --cov=./ --cov-report xml:./coverage.xml
+        pytest -s --cov=probeinterface --cov-report xml:./coverage.xml
     - uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
