--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 packages = ["probeinterface"]
-package-dir = {"probeinterface" = "probeinterface"}
+package-dir = {"probeinterface" = "src/probeinterface"}
 
 
 [project.optional-dependencies]
