--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,13 +1,14 @@
 version: 2
 
 build:
-    image: latest
+  os: ubuntu-20.04
+  image: latest
 
 sphinx:
   configuration: doc/conf.py
 
 python:
-  version: 3.8
+  version: 3.10
   install:
     - method: pip
       path: .
