--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,13 +2,13 @@ version: 2
 
 build:
   os: ubuntu-20.04
-  image: latest
+  tools:
+    python: "3.10"
 
 sphinx:
   configuration: doc/conf.py
 
 python:
-  version: 3.10
   install:
     - method: pip
       path: .
