add jsonschema to testing requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ package-dir = {"probeinterface" = "src/probeinterface"}
 [project.optional-dependencies]
 
 test = [
+    "jsonschema",
     "pytest",
     "pytest-cov",
     "matplotlib",
