--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -18,12 +18,13 @@ jobs:
     - name: Install Tools
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine build
+        pip install twine build
     - name: Package and Upload
       env:
         STACKMANAGER_VERSION: ${{ github.event.release.tag_name }}
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
-        python -m build --sdist --wheel
+        # python -m build is backend-independent
+        python -m build
         twine upload dist/*
