--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,13 +28,11 @@ changelog = "https://probeinterface.readthedocs.io/en/main/release_notes.html"
 
 
 [build-system]
-requires = ["setuptools>=62.0"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-
-[tool.setuptools]
-packages = ["probeinterface"]
-package-dir = {"probeinterface" = "src/probeinterface"}
+[tool.hatch.build.targets.wheel]
+packages = ["src/probeinterface"]
 
 
 [project.optional-dependencies]
