--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/probeinterface"]
+include = ["probeinterface/schema/probe.json.schema"]
 
 [tool.hatch.build.targets.sdist]
 packages = ["src/probeinterface"]
