--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,13 +31,9 @@ changelog = "https://probeinterface.readthedocs.io/en/main/release_notes.html"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/probeinterface"]
-include = ["probeinterface/schema/probe.json.schema"]
 
-[tool.hatch.build.targets.sdist]
-packages = ["src/probeinterface"]
-include = ["probeinterface/schema/probe.json.schema"]
+[tool.hatch.build]
+sources = ["src"]
 
 [project.optional-dependencies]
 
