--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -19,12 +19,17 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install twine build
-    - name: Package and Upload
+    - name: Package the code
+      run: |
+        # python -m build is backend-independent
+        python -m build
+        # test the new wheel
+        pip install dist/probeinterface*.whl
+        python -c "import probeinterface; print(probeinterface.__version__)"
+    - name: Upload to PyPI
       env:
         STACKMANAGER_VERSION: ${{ github.event.release.tag_name }}
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
-        # python -m build is backend-independent
-        python -m build
         twine upload dist/*
