--- a/.github/workflows/full_tests.yml
+++ b/.github/workflows/full_tests.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install package
       run: |
         python -m pip install --upgrade pip
-        pip install -e .[test]
+        pip install .[test]
     - name: Pytest
       run: |
         pytest --cov=probeinterface --cov-report xml:./coverage.xml
