--- a/.github/workflows/copy_probe_features.yml
+++ b/.github/workflows/copy_probe_features.yml
@@ -1,4 +1,4 @@
-name: Sync probe_features from ProbeTable
+name: Sync neuropixels_probe_features from ProbeTable
 
 on:
   schedule:
@@ -16,7 +16,7 @@ jobs:
     - name: Copy file from external repo
       run: |
         # Download the file directly
-        curl -o src/probeinterface/resources/probe_features.json \
+        curl -o src/probeinterface/resources/neuropixels_probe_features.json \
           https://raw.githubusercontent.com/billkarsh/ProbeTable/refs/heads/main/Tables/probe_features.json
 
     - name: Commit changes if any
@@ -24,8 +24,8 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
 
-        git add src/probeinterface/resources/probe_features.json
+        git add src/probeinterface/resources/neuropixels_probe_features.json
 
         # Only commit if there are changes
-        git diff --staged --quiet || git commit -m "Update probe_features from ProbeTable"
+        git diff --staged --quiet || git commit -m "Update neuropixels_probe_features from ProbeTable"
         git push
