Add pre-commit definition for codespell

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,3 +10,9 @@ repos:
     hooks:
     -   id: black
         files: ^src/|^tests/
+
+- repo: https://github.com/codespell-project/codespell
+  # Configuration for codespell is in .pre-commit-config.yaml
+  rev: v2.4.1
+  hooks:
+  - id: codespell
