Tune up codespell config to skip more

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ line-length = 120
 
 [tool.codespell]
 # Ref: https://github.com/codespell-project/codespell#using-a-config-file
-skip = '.git*,*.pdf'
+skip = '.git*,*.pdf,*.svg,data,./doc/releases'
 check-hidden = true
 # ignore-regex = ''
 # ignore-words-list = ''
