--- a/.github/workflows/full_tests.yml
+++ b/.github/workflows/full_tests.yml
@@ -1,4 +1,4 @@
-name: Test on Ubuntu
+name: Complete tests
 
 on:
   pull_request:
@@ -12,8 +12,13 @@ on:
 jobs:
   build-and-test:
 
-    runs-on: ubuntu-latest
-
+    name: ${{ matrix.os }} Python ${{ matrix.python-version }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.10", "3.14"]  # Lower and higher versions we support
+        os: [macos-latest, windows-latest, ubuntu-latest]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
@@ -26,9 +31,4 @@ jobs:
         pip install .[test]
     - name: Pytest
       run: |
-        pytest --cov=probeinterface --cov-report xml:./coverage.xml
-    - uses: codecov/codecov-action@v4
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        fail_ci_if_error: true
-        file: ./coverage.xml
+        pytest -v
