--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,11 @@ docs = [
     "pandas",
 ]
 
+[tool.pytest.ini_options]
+markers = [
+    "library",
+]
+
 [tool.coverage.run]
 omit = [
     "tests/*",
