--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [project]
 name = "probeinterface"
-version = "0.3.1"
+version = "0.3.2"
 authors = [
   { name="Samuel Garcia", email="sam.garcia.die@gmail.com" },
   { name="Alessio Buccino", email="alessiop.buccino@gmail.com" },
+  { name="Chris Halcrow", email="chrishalcrow@gmail.com" }
 ]
 
 description = "Python package to handle probe layout, geometry and wiring to device."
